--- a/WebAPIDotNet/appsettings.json
+++ b/WebAPIDotNet/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebAPIDotNetConnectionString": "Server=.;Database=WebAPIDotNet;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
+  }
 }
