Add ASP.NET Core Identity for authentication/authorization
Integrated ASP.NET Core Identity to enable user authentication
and role-based authorization. Updated `WebAPIDotNetContext` to
inherit from `IdentityDbContext<ApplicationUser>`. Renamed the
`Departments` table to `Department` and updated all references.

Added `AccountController` for user registration and login,
along with `RegisterDto` and `LoginDto` for handling input.
Implemented `TokenService` and `ITokenService` for JWT token
generation. Updated `Program.cs` to configure Identity services
and JWT authentication.

Created new migrations to add Identity tables (`AspNetUsers`,
`AspNetRoles`, etc.) and updated the database schema. Updated
`appsettings.json` with JWT configuration. Added new models
(`ApplicationUser`, `ApplicationRole`, `ApiAction`, etc.) to
support role-based access control.

Refactored `DepartmentController` to use the renamed `Department`
DbSet. Enhanced security and scalability of the application.

--- a/WebAPIDotNet/appsettings.json
+++ b/WebAPIDotNet/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WebAPIDotNetConnectionString": "Server=.;Database=WebAPIDotNet;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "SecritKey": "asdadaqeq!@##3244343dsdfsfdiui989",
+    "AudienceIP": "http://localhost:4200/",
+    "IssuerIP": "http://localhost:5127/"
   }
 }
